renaming close account to delete account
