# src/swagger/swagger.yaml
@@ -35,10 +35,10 @@ paths:
       description: "This resource allows an individual user to disable 2FA for account."
       tags:
         - POST
-  /close-account:
+  /delete-account:
     post:
-      summary: "Used to disable two-factor authentication"
-      description: "This resource allows an individual user to close his account. <br />Operation makes account unavailable for normal user. <br />All public information become hidden from other users. <br />Account can be restored by sign in system during 6 months."
+      summary: "Used to delete account"
+      description: "This resource allows an individual user to delete his account. <br />Operation makes account unavailable for normal user. <br />All public information become hidden from other users. <br />Account can be restored by sign in system during 6 months."
       tags:
         - POST
   /get-user-by-token:
